--- a/style.css
+++ b/style.css
@@ -1,46 +1,6 @@
-html {
-  margin: 0 !important;
-}
-body {
-  text-align: left;
-}
-/* #sidebar_right {
-  border-left: 1px solid black;
-} */
-.header-logo {
-  text-align: center;
-}
-.header-logo img {
-  height: 45px;
-}
-.jumbotron h1,
-.jumbotron .h1 {
-  font-size: 35px;
-  color: #aaa;
-  text-align: center;
-}
-
-.title {
-  font-size: 11pt;
-  font-family: verdana;
-  font-weight: bold;
-}
-#main {
-  margin-bottom: 50px;
-}
-a {
-  color: #34393e;
-  text-decoration: none;
+* {
+  margin: 0;
 }
 #footer {
-  width: 100%;
-  border-top: 1px #a2a2a2 solid;
-  text-align: center;
-  padding: 40px;
-  background: #eee;
-}
-#footer h1 {
-  color: #aaa;
-  font-size: 30px;
-  font-weight: 500;
+  background-color: red;
 }
