--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -411,35 +411,15 @@ button {
   vertical-align: middle;
 }
 
-@media screen and (min-width: 672px) and (max-width: 950px) {
-  .logo {
-    width: 40px;
-  }
-}
-
-@media screen and (min-width: 951px) {
-  .logo {
-    width: 50px;
-  }
-}
-
 /* ======================================================================= */
 /* ================================ HEADER =============================== */
-header {
+.header {
   background-color: var(--primary-black);
   height: 10vh;
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
-}
-
-@media screen and (min-width: 951px) {
-  header {
-    flex-direction: row;
-    height: 12vh;
-  }
 }
 
 nav {
@@ -449,15 +429,6 @@ nav {
   left: 0;
   width: 100%;
   z-index: 2;
-}
-
-@media screen and (min-width: 951px) {
-  nav {
-    width: 1000px;
-    position: static;
-    display: flex;
-    justify-content: flex-end;
-  }
 }
 
 .flag {
@@ -475,87 +446,56 @@ nav {
 }
 
 .en-flag {
-  background-image: url(image/engelsk.png);
+  background-image: url(../images/engelsk.png);
 }
 
 .dk-flag {
-  background-image: url(image/dansk.png);
+  background-image: url(../images/dansk.png);
 }
 
 /* ---------------------------- DROPDOWN MENU ---------------------------- */
-@media screen and (max-width: 671px) {
-  menu {
-    cursor: pointer;
-  }
-
-  #menu {
-    width: 30px;
-    height: 30px;
-    cursor: pointer;
-    margin-top: 20px;
-  }
-
-  .change {
-    display: block !important;
-  }
-
-  .change .bar {
-    background-color: var(--white);
-  }
-
-  .bar {
-    height: 3px;
-    width: 100%;
-    background-color: var(--white);
-    display: block;
-    border-radius: 5px;
-    transition: 0.3s ease;
-  }
-
-  #bar1 {
-    transform: translateY(-4px);
-  }
-
-  .change #bar1 {
-    transform: translateY(4px) rotate(-45deg);
-  }
-
-  .change #bar2 {
-    opacity: 0;
-  }
-
-  #bar3 {
-    transform: translateY(4px);
-  }
+menu {
+  cursor: pointer;
 }
 
-@media screen and (min-width: 672px) and (max-width: 950px) {
-  #menu {
-    height: 45px;
-    width: 45px;
-  }
-
-  .change #bar1 {
-    transform: translateY(6px) rotate(-45deg) !important;
-  }
+#menu {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  margin-top: 20px;
 }
 
-@media screen and (min-width: 951px) {
-  #menu {
-    display: none;
-  }
-
-  .bar {
-    height: 5px;
-  }
+.change {
+  display: block !important;
 }
 
-@media screen and (min-width: 0px) and (max-width: 671px) {}
+.change .bar {
+  background-color: var(--white);
+}
 
-@media screen and (min-width: 672px) and (max-width: 950px) {
-  #bar3 {
-    transform: translateY(4px);
-  }
+.bar {
+  height: 3px;
+  width: 100%;
+  background-color: var(--white);
+  display: block;
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+
+#bar1 {
+  transform: translateY(-4px);
+}
+
+.change #bar1 {
+  transform: translateY(4px) rotate(-45deg);
+}
+
+.change #bar2 {
+  opacity: 0;
+}
+
+#bar3 {
+  transform: translateY(4px);
 }
 
 .change #bar3 {
@@ -565,64 +505,27 @@ nav {
 .navigation_link {
   list-style: none;
   color: var(--white);
-  font-size: 15px;
+  font-size: 20px;
   text-decoration: none;
-  margin-right: 20px;
 }
 
 .navigation_link a.active {
   color: var(--red);
 }
 
-@media screen and (min-width: 951px) {
-  .navigation_link {
-    padding: 0;
-  }
-}
-
 .active {
   color: var(--red);
-}
-
-@media screen and (min-width: 951px) {
-  .nav_list a:hover {
-    color: var(--red);
-  }
-}
-
-@media screen and (min-width: 951px) {
-  .fast-links a:hover {
-    color: var(--red);
-  }
 }
 
 .nav_list li {
   padding: 12px 12px 4px 12px;
 }
 
-@media screen and (min-width: 951px) {
-  .nav_list li {
-    padding: 12px 4px 4px 4px;
-  }
-}
-
-@media screen and (min-width: 0px) and (max-width: 671px) {
-  .nav_list {
-    padding: 0;
-    margin: 0 15px 20px;
-    transition: 0.3s ease;
-    display: none;
-    font-size: 15px;
-    list-style-type: none;
-  }
-}
-
-@media screen and (min-width: 951px) {
-  .nav_list {
-    width: 96%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    margin: 0;
-  }
+.nav_list {
+  padding: 0;
+  margin: 0 15px 20px;
+  transition: 0.3s ease;
+  display: none;
+  font-size: 20px;
+  list-style-type: none;
 }
