nav desktop working

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -440,6 +440,18 @@ button {
   vertical-align: middle;
 }
 
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .logo {
+    width: 40px;
+  }
+}
+
+@media screen and (min-width: 951px) {
+  .logo {
+    width: 50px;
+  }
+}
+
 /* ======================================================================= */
 /* ================================ HEADER =============================== */
 .header {
@@ -452,6 +464,13 @@ button {
   margin: 0 15px;
 }
 
+@media screen and (min-width: 951px) {
+  .header {
+    flex-direction: row;
+    height: 12vh;
+  }
+}
+
 nav {
   background-color: var(--primary-black);
   position: absolute;
@@ -459,6 +478,15 @@ nav {
   left: 0;
   width: 100%;
   z-index: 2;
+}
+
+@media screen and (min-width: 951px) {
+  nav {
+    width: 1000px;
+    position: static;
+    display: flex;
+    justify-content: flex-end;
+  }
 }
 
 .flag {
@@ -494,6 +522,19 @@ menu {
   margin-top: 20px;
 }
 
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  #menu {
+    height: 45px;
+    width: 45px;
+  }
+}
+
+@media screen and (min-width: 951px) {
+  #menu {
+    display: none;
+  }
+}
+
 .change {
   display: block !important;
 }
@@ -511,12 +552,24 @@ menu {
   transition: 0.3s ease;
 }
 
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .bar {
+    height: 5px;
+  }
+}
+
 #bar1 {
   transform: translateY(-4px);
 }
 
 .change #bar1 {
   transform: translateY(4px) rotate(-45deg);
+}
+
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .change #bar1 {
+    transform: translateY(6px) rotate(-45deg) !important;
+  }
 }
 
 .change #bar2 {
@@ -527,6 +580,12 @@ menu {
   transform: translateY(4px);
 }
 
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  #bar3 {
+    transform: translateY(4px);
+  }
+}
+
 .change #bar3 {
   transform: translateY(-2px) rotate(45deg);
 }
@@ -534,8 +593,14 @@ menu {
 .navigation_link {
   list-style: none;
   color: var(--white);
-  font-size: 20px;
+  font-size: 18px;
   text-decoration: none;
+}
+
+@media screen and (min-width: 951px) {
+  .navigation_link {
+    padding: 0;
+  }
 }
 
 .navigation_link a.active {
@@ -550,6 +615,20 @@ menu {
   padding: 12px 12px 4px 12px;
 }
 
+.nav_list li:last-child {
+  padding-left: 2px;
+}
+
+@media screen and (min-width: 951px) {
+  .nav_list li {
+    padding: 12px 4px 4px 18px;
+  }
+
+  .nav_list li:last-child {
+    padding-left: 8px;
+  }
+}
+
 .nav_list {
   padding: 0;
   margin: 0 15px 20px;
@@ -557,4 +636,22 @@ menu {
   display: none;
   font-size: 20px;
   list-style-type: none;
+}
+
+@media screen and (min-width: 951px) {
+  .nav_list {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin: 0;
+  }
+
+  .nav_list a:hover {
+    color: var(--red);
+  }
+
+  .fast-links a:hover {
+    color: var(--red);
+  }
 }
