--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -517,14 +517,14 @@ menu {
 
 #menu {
   width: 30px;
-  height: 30px;
+  height: 40px;
   cursor: pointer;
   margin-top: 20px;
 }
 
 @media screen and (min-width: 672px) and (max-width: 950px) {
   #menu {
-    height: 45px;
+    height: 55px;
     width: 45px;
   }
 }
@@ -545,6 +545,7 @@ menu {
 
 .bar {
   height: 3px;
+  margin-top: 3px;
   width: 100%;
   background-color: var(--white);
   display: block;
@@ -555,6 +556,7 @@ menu {
 @media screen and (min-width: 672px) and (max-width: 950px) {
   .bar {
     height: 5px;
+    margin-top: 5px;
   }
 }
 
@@ -563,12 +565,12 @@ menu {
 }
 
 .change #bar1 {
-  transform: translateY(4px) rotate(-45deg);
+  transform: translateY(6px) rotate(45deg);
 }
 
 @media screen and (min-width: 672px) and (max-width: 950px) {
   .change #bar1 {
-    transform: translateY(6px) rotate(-45deg) !important;
+    transform: translateY(10px) rotate(45deg) !important;
   }
 }
 
@@ -580,14 +582,14 @@ menu {
   transform: translateY(4px);
 }
 
-@media screen and (min-width: 672px) and (max-width: 950px) {
-  #bar3 {
-    transform: translateY(4px);
-  }
+.change #bar3 {
+  transform: translateY(-6px) rotate(-45deg);
 }
 
-.change #bar3 {
-  transform: translateY(-2px) rotate(45deg);
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .change #bar3 {
+    transform: translateY(-10px) rotate(-45deg);
+  }
 }
 
 .navigation_link {
@@ -612,11 +614,13 @@ menu {
 }
 
 .nav_list li {
-  padding: 12px 12px 4px 12px;
+  padding: 12px 12px 5px 2px;
 }
 
-.nav_list li:last-child {
-  padding-left: 2px;
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .nav_list li {
+    padding: 12px 12px 5px 5px;
+  }
 }
 
 @media screen and (min-width: 951px) {
