--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Asap:wght@200&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap");
 
+/**
+Theme Name: Anton Tzannis
+Author: Noerwald v/ Camilla Nørgaard og Maja Wennwewald  
+**/
+
 * {
   margin: 0;
 }
