--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,8 @@ Author: Noerwald v/ Camilla Nørgaard og Maja Wennwewald
   gap: 20px;
 }
 
-@media screen and (min-width: 951px), (min-width: 672px) and (max-width: 950px) {
+@media screen and (min-width: 951px),
+(min-width: 672px) and (max-width: 950px) {
   .footer-flex-row {
     flex-direction: row;
     margin: 0;
@@ -459,19 +460,19 @@ button {
 }
 
 /* --------------------------------- HOVER ------------------------------- */
-.primary-btn:hover > .button-rightpart-primary,
-.primary-btn:hover > .button-leftpart-primary,
-.primary-btn:hover > .rightpart-button-user,
-.primary-btn:hover > .leftpart-button-user {
+.primary-btn:hover>.button-rightpart-primary,
+.primary-btn:hover>.button-leftpart-primary,
+.primary-btn:hover>.rightpart-button-user,
+.primary-btn:hover>.leftpart-button-user {
   background-color: var(--gold-hover);
   border: 2px solid var(--gold-hover);
   cursor: pointer;
 }
 
-.secondary-btn:hover > .button-rightpart-secondary,
-.secondary-btn:hover > .button-leftpart-secondary,
-.secondary-btn:hover > .rightpart-button-back,
-.secondary-btn:hover > .leftpart-button-back {
+.secondary-btn:hover>.button-rightpart-secondary,
+.secondary-btn:hover>.button-leftpart-secondary,
+.secondary-btn:hover>.rightpart-button-back,
+.secondary-btn:hover>.leftpart-button-back {
   background-color: var(--gold);
   border: 2px solid var(--gold);
   cursor: pointer;
@@ -532,7 +533,27 @@ button {
 
 /* ======================================================================= */
 /* ================================ HEADER =============================== */
-.header {
+.header-inner {
+  background-color: var(--primary-black);
+  /* width: 100%; */
+  height: 10vh;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 20px;
+}
+
+.top-menu ul {
+  list-style-type: none;
+  display: flex;
+}
+
+.top-menu ul li {
+  padding-left: 20px;
+}
+
+/* .header {
   background-color: var(--primary-black);
   width: 100%;
   height: 10vh;
@@ -740,6 +761,8 @@ menu {
   }
 }
 
+*/
+
 /* ======================================================================= */
 /* ========================== PRODUCTS PAGE ============================== */
 .product-americancrew::before {
@@ -785,6 +808,7 @@ menu {
 #cta-offer-info-btn {
   display: none;
 }
+
 /* ======================================================================= */
 /* ========================== PRICING PAGE ============================== */
 
