--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,7 +101,8 @@ Author: Noerwald v/ Camilla Nørgaard og Maja Wennwewald
   gap: 20px;
 }
 
-@media screen and (min-width: 951px), (min-width: 672px) and (max-width: 950px) {
+@media screen and (min-width: 951px),
+(min-width: 672px) and (max-width: 950px) {
   .footer-flex-row {
     flex-direction: row;
     margin: 0;
@@ -460,19 +461,19 @@ button {
 }
 
 /* --------------------------------- HOVER ------------------------------- */
-.primary-btn:hover > .button-rightpart-primary,
-.primary-btn:hover > .button-leftpart-primary,
-.primary-btn:hover > .rightpart-button-user,
-.primary-btn:hover > .leftpart-button-user {
+.primary-btn:hover>.button-rightpart-primary,
+.primary-btn:hover>.button-leftpart-primary,
+.primary-btn:hover>.rightpart-button-user,
+.primary-btn:hover>.leftpart-button-user {
   background-color: var(--gold-hover);
   border: 2px solid var(--gold-hover);
   cursor: pointer;
 }
 
-.secondary-btn:hover > .button-rightpart-secondary,
-.secondary-btn:hover > .button-leftpart-secondary,
-.secondary-btn:hover > .rightpart-button-back,
-.secondary-btn:hover > .leftpart-button-back {
+.secondary-btn:hover>.button-rightpart-secondary,
+.secondary-btn:hover>.button-leftpart-secondary,
+.secondary-btn:hover>.rightpart-button-back,
+.secondary-btn:hover>.leftpart-button-back {
   background-color: var(--gold);
   border: 2px solid var(--gold);
   cursor: pointer;
@@ -544,6 +545,12 @@ button {
   margin: 0 20px;
 }
 
+@media screen and (min-width: 951px) {
+  .header-inner {
+    flex-direction: row;
+  }
+}
+
 .top-menu ul {
   list-style-type: none;
   display: flex;
@@ -553,44 +560,7 @@ button {
   padding-left: 20px;
 }
 
-/* .header {
-  background-color: var(--primary-black);
-  width: 100%;
-  height: 10vh;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  align-items: center;
-}
-
-@media screen and (min-width: 951px) {
-  .header {
-    flex-direction: row;
-    height: 12vh;
-  }
-}
-
-nav {
-  background-color: var(--primary-black);
-  position: absolute;
-  top: 9vh;
-  left: 0;
-  width: 100%;
-  z-index: 2;
-}
-
-@media screen and (min-width: 951px) {
-  nav {
-    width: 1000px;
-    position: static;
-    display: flex;
-    justify-content: flex-end;
-    margin-right: 15px;
-    background-color: transparent;
-  }
-}
-
-.flag {
+/* .flag {
   display: flex;
   flex-direction: row;
 }
@@ -609,7 +579,7 @@ nav {
 
 .dk-flag {
   background-image: url(../images/dansk.png);
-}
+} */
 
 /* ---------------------------- DROPDOWN MENU ---------------------------- */
 menu {
@@ -760,12 +730,14 @@ menu {
     color: var(--red);
   }
 }
+
 /* ======================================================================= */
 /* ========================== FRONT PAGE ============================== */
 .hero {
   width: 100%;
   height: 675px;
 }
+
 .hero-right {
   position: absolute;
   width: 100%;
@@ -876,6 +848,7 @@ menu {
     width: 100%;
   }
 }
+
 /* ======================================================================= */
 /* ========================== PRODUCTS PAGE ============================== */
 .product-americancrew::before {
