--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -294,7 +294,7 @@ h1 {
 /* ----------------------------------- H2 -------------------------------- */
 h2 {
   font-family: var(--secondary_font);
-  font-weight: 100;
+  font-weight: 600;
   background: var(--gold-gradient);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -848,18 +848,45 @@ menu {
   }
 }
 
-.salon-text {
-  text-align: center;
-  margin: 10px 0;
+.salon-section {
+  margin: 55px 0;
 }
 
-.salon-img {
-  width: 50%;
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .salon-section {
+    margin: 65px 0;
+  }
+}
+@media screen and (min-width: 951px) {
+  .salon-section {
+    margin: 90px 0;
+  }
+}
+
+.salon-text {
+  text-align: center;
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .salon-text {
+    width: 45%;
+    text-align: left;
+    margin: 0px auto;
+  }
+}
+@media screen and (min-width: 951px) {
+  .salon-text {
+    width: 30%;
+    text-align: left;
+    /* margin: 10px auto; */
+    margin: 0 auto;
+  }
 }
 
 @media screen and (min-width: 672px) and (max-width: 950px) {
   .salon-img {
-    width: 30%;
+    /* width: 30%; */
+    width: 45%;
     margin: 10px auto;
     -o-object-fit: cover;
     object-fit: cover;
@@ -867,11 +894,16 @@ menu {
 }
 @media screen and (min-width: 951px) {
   .salon-img {
-    width: 30%;
+    width: 40%;
+    margin: auto;
+    height: 310px;
+    -o-object-fit: cover;
+    object-fit: cover;
+    /* width: 30%;
     margin: auto;
     height: 250px;
     -o-object-fit: cover;
-    object-fit: cover;
+    object-fit: cover; */
   }
 }
 
