--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -847,7 +847,7 @@ menu {
     width: 100%;
   }
 }
-
+/* FRONT PAGE - SALON SECTION */
 .salon-section {
   margin: 55px 0;
 }
@@ -857,6 +857,7 @@ menu {
     margin: 65px 0;
   }
 }
+
 @media screen and (min-width: 951px) {
   .salon-section {
     margin: 90px 0;
@@ -867,6 +868,7 @@ menu {
   text-align: center;
   margin-bottom: 20px;
 }
+
 @media screen and (min-width: 672px) and (max-width: 950px) {
   .salon-text {
     width: 45%;
@@ -874,6 +876,7 @@ menu {
     margin: 0px auto;
   }
 }
+
 @media screen and (min-width: 951px) {
   .salon-text {
     width: 30%;
@@ -905,6 +908,98 @@ menu {
     -o-object-fit: cover;
     object-fit: cover; */
   }
+}
+/* FRONT PAGE - OPENING HOURS SECTION*/
+.opening-hours-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-auto-columns: 1fr;
+  gap: 30px 30px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "monday tuesday"
+    "wednesday thursday"
+    "friday saturday"
+    "sunday sunday";
+  width: 100%;
+  margin: 20px 0;
+}
+
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .opening-hours-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-auto-columns: 1fr;
+    grid-template-areas: "monday tuesday wednesday thursday friday saturday sunday";
+  }
+}
+
+@media screen and (min-width: 951px) {
+  .opening-hours-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-auto-columns: 1fr;
+    gap: 30px 48px;
+    grid-template-areas: "monday tuesday wednesday thursday friday saturday sunday";
+  }
+}
+
+.opening-hours-section,
+.about-cover-section {
+  width: 100%;
+  height: 400px;
+  display: grid;
+  place-items: center;
+  position: relative;
+}
+
+@media screen and (min-width: 672px) and (max-width: 950px), (min-width: 951px) {
+  .opening-hours-section,
+  .about-cover-section {
+    height: 350px;
+  }
+}
+
+.opening-hours-section::before {
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  filter: grayscale(100%);
+  opacity: 10%;
+  background-position: -323px;
+  background-size: 270%;
+  background-repeat: no-repeat;
+  background-image: url("../images/opening-hours-background-img.webp");
+}
+
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .opening-hours-section::before {
+    background-size: cover;
+    background-position: center;
+    opacity: 10%;
+  }
+}
+@media screen and (min-width: 951px) {
+  .opening-hours-section-left::before {
+    -webkit-clip-path: polygon(32% 0, 100% 0, 100% 100%, 51% 100%);
+    clip-path: polygon(32% 0, 100% 0, 100% 100%, 51% 100%);
+    background-position: -280px;
+    background-size: 130%;
+    opacity: 30%;
+  }
+}
+
+.opening-hours-section,
+.about-cover-section {
+  width: 100%;
+  height: 400px;
+  display: grid;
+  place-items: center;
+  position: relative;
 }
 
 /* ======================================================================= */
