--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -910,41 +910,6 @@ menu {
   }
 }
 /* FRONT PAGE - OPENING HOURS SECTION*/
-.opening-hours-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
-  grid-auto-columns: 1fr;
-  gap: 30px 30px;
-  grid-auto-flow: row;
-  grid-template-areas:
-    "monday tuesday"
-    "wednesday thursday"
-    "friday saturday"
-    "sunday sunday";
-  width: 100%;
-  margin: 20px 0;
-}
-
-@media screen and (min-width: 672px) and (max-width: 950px) {
-  .opening-hours-container {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    grid-auto-columns: 1fr;
-    grid-template-areas: "monday tuesday wednesday thursday friday saturday sunday";
-  }
-}
-
-@media screen and (min-width: 951px) {
-  .opening-hours-container {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-template-rows: 1fr;
-    grid-auto-columns: 1fr;
-    gap: 30px 48px;
-    grid-template-areas: "monday tuesday wednesday thursday friday saturday sunday";
-  }
-}
-
 .opening-hours-section,
 .about-cover-section {
   width: 100%;
@@ -968,40 +933,104 @@ menu {
   width: 100%;
   height: 100%;
   position: absolute;
-  filter: grayscale(100%);
-  opacity: 10%;
+  filter: grayscale(30%);
+  opacity: 40%;
   background-position: -323px;
   background-size: 270%;
   background-repeat: no-repeat;
-  background-image: url("../images/opening-hours-background-img.webp");
+  background-image: url(../images/opening-hours-background-img.webp);
 }
 
 @media screen and (min-width: 672px) and (max-width: 950px) {
   .opening-hours-section::before {
     background-size: cover;
     background-position: center;
-    opacity: 10%;
+    opacity: 40%;
   }
 }
+
 @media screen and (min-width: 951px) {
   .opening-hours-section-left::before {
     -webkit-clip-path: polygon(32% 0, 100% 0, 100% 100%, 51% 100%);
     clip-path: polygon(32% 0, 100% 0, 100% 100%, 51% 100%);
     background-position: -280px;
     background-size: 130%;
-    opacity: 30%;
+    opacity: 80%;
   }
 }
 
-.opening-hours-section,
-.about-cover-section {
-  width: 100%;
-  height: 400px;
-  display: grid;
-  place-items: center;
-  position: relative;
+@media screen and (min-width: 951px) {
+  .opening-hours-section-right::before {
+    -webkit-clip-path: polygon(0% 0, 30% 0, 60% 161%, 0% 100%);
+    clip-path: polygon(0% 0, 30% 0, 60% 161%, 0% 100%);
+    background-position: -280px;
+    background-size: 130%;
+    opacity: 80%;
+  }
 }
 
+.opening-hours-section-inside {
+  position: relative;
+  text-align: center;
+}
+
+.opening-hours-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-auto-columns: 1fr;
+  gap: 30px 30px;
+  grid-auto-flow: row;
+  grid-template-areas: "monday tuesday" "wednesday thursday" "friday saturday" "sunday sunday";
+  width: 100%;
+  margin: 20px 0;
+}
+
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .opening-hours-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-auto-columns: 1fr;
+    gap: 15px;
+    grid-template-areas: "monday tuesday wednesday thursday friday saturday sunday";
+  }
+}
+@media screen and (min-width: 951px) {
+  .opening-hours-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-auto-columns: 1fr;
+    gap: 30px 48px;
+    grid-template-areas: "monday tuesday wednesday thursday friday saturday sunday";
+  }
+}
+
+.sunday {
+  grid-area: sunday;
+}
+
+.opening-hours-days {
+  font-size: 20px;
+  margin-bottom: 8px;
+}
+
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .opening-hours-days {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+}
+@media screen and (min-width: 951px) {
+  .opening-hours-days {
+    font-size: 22px;
+    margin-bottom: 20px;
+  }
+}
+
+.opening-hours-hours {
+  font-size: 18px;
+  margin-bottom: 8px;
+}
 /* ======================================================================= */
 /* ========================== PRODUCTS PAGE ============================== */
 .product-americancrew::before {
