--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,7 +353,8 @@ button {
   height: auto;
   background-color: transparent;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  gap: 5px;
   padding: 0;
   border: none;
   color: var(--white);
@@ -778,11 +779,12 @@ menu {
   width: 100%;
   height: 675px;
   opacity: 80%;
-  filter: blur(1px);
+  /* filter: blur(1px); */
   background-image: url("../images/hero-left.webp");
   background-size: cover;
   background-color: var(--white);
-  background-blend-mode: luminosity;
+  /* background-blend-mode: luminosity; */
+  filter: grayscale(20%);
   -webkit-clip-path: polygon(0 0%, 129% 0%, 100% 67%, 0 53%);
   clip-path: polygon(0 0%, 129% 0%, 100% 67%, 0 53%);
 }
@@ -1031,6 +1033,85 @@ menu {
   font-size: 18px;
   margin-bottom: 8px;
 }
+/*CTA BTN SECTION*/
+.cta-section {
+  height: 250px;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  align-items: flex-end;
+  position: relative;
+  overflow: hidden;
+}
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .cta-section {
+    height: 250px;
+    width: 190px;
+  }
+}
+@media screen and (min-width: 951px) {
+  .cta-section {
+    height: 250px;
+    width: 100%;
+    margin: 0 20px 0px 20px;
+  }
+}
+
+.cta-section::before {
+  content: "";
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 80%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.cta-section-facebook::before {
+  background-image: url(../images/hero-left.webp);
+  filter: grayscale(40%);
+}
+
+.cta-section-seeProducts::before {
+  background-image: url(../images/products.webp);
+}
+
+.cta-section-offer::before {
+  background-image: url(../images/scissor.webp);
+  filter: grayscale(90%);
+}
+
+.cta-section a {
+  width: 100%;
+}
+
+.cta-section-btn {
+  text-align: center;
+  height: 50px;
+  width: 100%;
+  background-color: rgba(28, 28, 28, 0.7294117647);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  transition: all 0.5s ease;
+}
+
+@media screen and (min-width: 951px) {
+  .cta-section-btn {
+    height: 60px;
+  }
+}
+@media screen and (min-width: 672px) and (max-width: 950px) {
+  .cta-flex {
+    gap: 10px;
+  }
+}
+
 /* ======================================================================= */
 /* ========================== PRODUCTS PAGE ============================== */
 .product-americancrew::before {
