--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -790,9 +790,9 @@ menu {
   /* clip-path: polygon(0 0%, 129% 0%, 100% 67%, 0 53%); */
 
   /* VIDEO */
-  -webkit-clip-path: polygon(0% 0, 78% 0, 52.5% 100%, 0% 100%);
+  -webkit-clip-path: polygon(0% 0, 78% 0, 52.5% 100%, 0% 100%) !important;
 
-  clip-path: polygon(0% 0, 78% 0, 52.5% 100%, 0% 100%);
+  clip-path: polygon(0% 0, 78% 0, 52.5% 100%, 0% 100%) !important;
 }
 
 @media screen and (min-width: 672px) and (max-width: 950px) {
