--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -786,13 +786,11 @@ menu {
   background-color: var(--white);
   background-blend-mode: luminosity;
   /* filter: grayscale(80%); */
-  /* -webkit-clip-path: polygon(0 0%, 129% 0%, 100% 67%, 0 53%); */
-  /* clip-path: polygon(0 0%, 129% 0%, 100% 67%, 0 53%); */
+  -webkit-clip-path: polygon(0 0%, 129% 0%, 100% 67%, 0 53%);
+  clip-path: polygon(0 0%, 129% 0%, 100% 67%, 0 53%);
+  filter: grayscale(60%);
 
   /* VIDEO */
-  -webkit-clip-path: polygon(0% 0, 78% 0, 52.5% 100%, 0% 100%) !important;
-
-  clip-path: polygon(0% 0, 78% 0, 52.5% 100%, 0% 100%) !important;
 }
 
 @media screen and (min-width: 672px) and (max-width: 950px) {
@@ -804,9 +802,18 @@ menu {
 
 @media screen and (min-width: 951px) {
   .hero-left {
-    -webkit-clip-path: polygon(0% 0, 78% 0, 37.5% 160%, 0% 100%);
-    clip-path: polygon(0% 0, 78% 0, 37.5% 160%, 0% 100%);
+    /*     -webkit-clip-path: polygon(0% 0, 78% 0, 37.5% 160%, 0% 100%);
+    clip-path: polygon(0% 0, 78% 0, 37.5% 160%, 0% 100%); */
+    -webkit-clip-path: polygon(0% 0, 78% 0, 52.5% 100%, 0% 100%) !important;
+
+    clip-path: polygon(0% 0, 78% 0, 52.5% 100%, 0% 100%) !important;
   }
+}
+
+.hero-video {
+  width: 100%;
+  height: 745px;
+  object-fit: cover;
 }
 
 .hero-text {
