--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,13 @@ Author: Noerwald v/ Camilla Nørgaard og Maja Wennwewald
 /* Camilla */
 
 /*--- FOOTER ---*/
+.footer-line {
+  border-top: 2px solid var(--gold-gradient);
+  background-image: var(--gold-gradient);
+  height: 1px;
+  width: 100%;
+}
+
 #footer-background {
   height: 400px;
   position: relative;
@@ -48,12 +55,13 @@ Author: Noerwald v/ Camilla Nørgaard og Maja Wennwewald
   width: 100%;
   height: 100%;
   position: absolute;
-  opacity: 50%;
+  /* opacity: 50%; */
   background-repeat: no-repeat;
   background-size: cover;
-  filter: brightness(0.9);
-  background-image: url("../images/footer-background.png");
+  /* filter: brightness(0.9); */
+  /* background-image: url("../images/footer-background.png"); */
   background-position: center;
+  background-color: var(--secondary-black);
 }
 
 .footer-center {
